fix : header alignment

--- a/src/components/Repositories/index.scss
+++ b/src/components/Repositories/index.scss
@@ -30,7 +30,9 @@
   top: 0;
   z-index: 1;
   background-color: #fff;
-  align-items: center;
+  .repo_grid {
+    align-items: center;
+  }
   &-user {
     transition: 0.2s ease-out;
     &.hide {
